--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,35 @@
+amqp==5.0.6
 asgiref==3.3.1
+billiard==3.6.4.0
 biopython==1.78
+celery==5.1.2
+celery-progress==0.1.1
+click==7.1.2
+click-didyoumean==0.0.3
+click-plugins==1.1.1
+click-repl==0.2.0
 cycler==0.10.0
 decorator==4.4.2
 Django==3.1.7
+django-crispy-forms==1.12.0
+django-guardian==2.4.0
+isodate==0.6.0
 kiwisolver==1.3.1
+kombu==5.1.0
+lxml==4.6.3
 matplotlib==3.4.0
+meson==0.58.1
 networkx==2.5
 numpy==1.20.2
 Pillow==8.1.2
+prompt-toolkit==3.0.19
 pydot==1.4.2
 pyparsing==2.4.7
 python-dateutil==2.8.1
+python3-saml==1.12.0
 pytz==2021.1
 six==1.15.0
 sqlparse==0.4.1
+vine==5.0.0
+wcwidth==0.2.5
+xmlsec==1.3.12
