Docker, first cluster markers.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,35 +1,24 @@
-amqp==5.0.6
-asgiref==3.3.1
-billiard==3.6.4.0
-biopython==1.78
-celery==5.1.2
-celery-progress==0.1.1
-click==7.1.2
-click-didyoumean==0.0.3
-click-plugins==1.1.1
-click-repl==0.2.0
-cycler==0.10.0
-decorator==4.4.2
-Django==3.1.7
-django-crispy-forms==1.12.0
+asgiref==3.4.1
+certifi==2021.10.8
+charset-normalizer==2.0.7
+defusedxml==0.7.1
+Django==3.2.9
+django-crispy-forms==1.13.0
 django-guardian==2.4.0
+django-settings-export==1.2.1
+idna==3.3
 isodate==0.6.0
-kiwisolver==1.3.1
-kombu==5.1.0
-lxml==4.6.3
-matplotlib==3.4.0
-meson==0.58.1
-networkx==2.5
-numpy==1.20.2
-Pillow==8.1.2
-prompt-toolkit==3.0.19
-pydot==1.4.2
-pyparsing==2.4.7
-python-dateutil==2.8.1
+Jinja2==2.11.3
+lxml==4.6.4
+MarkupSafe==2.0.1
+mock==4.0.3
+onelogin==2.0.2
+python-dateutil==2.8.2
 python3-saml==1.12.0
-pytz==2021.1
-six==1.15.0
-sqlparse==0.4.1
-vine==5.0.0
-wcwidth==0.2.5
+pytz==2021.3
+PyYAML==5.4.1
+requests==2.26.0
+six==1.16.0
+sqlparse==0.4.2
+urllib3==1.26.7
 xmlsec==1.3.12
