--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,22 @@
-version: "3"
+version: '3.7'
+
 services:
-  app:
+  db:
+    image: "postgres:11"
+    environment:
+      - "POSTGRES_HOST_AUTH_METHOD=trust"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data/
+  web:
     build: .
-    image: foo/bar
+    command: python /code/manage.py runserver 0.0.0.0:3500
+    volumes:
+      - /Users/jfurlong/dev/FigTree-command-line/phylobook_fixed:/data
+      - .:/code
     ports:
-      - "3500:3500"
+      - 3500:3500
+    depends_on:
+      - db
+
+volumes:
+  postgres_data:
