Docker and configuration improvements.

--- a/.gitignore
+++ b/.gitignore
@@ -109,6 +109,8 @@ Control.ca-bundle
 Control.system-ca-bundle 
 GitHub.sublime-settings  
 
-/phylobook/settings.py.prod
+/phylobook/settings/prod.py
 /phylobook/settings.py
 /phylobook/settings.py.dev
+/phylobook/settings/saml.py
+/config.env
