--- a/config.env.TEMPLATE
+++ b/config.env.TEMPLATE
@@ -1,7 +1,44 @@
 
+# Add a unique secret key string
+SECRET_KEY=
+
+# Set debug off (0) or on (1)
+DEBUG=0
+
+# Set the hosts (separated by a space) that are allowed to access this application.
+# E.g. localhost 127.0.0.1 myserver.domain.com
+DJANGO_ALLOWED_HOSTS=localhost 127.0.0.1
+
+# Set the path to the data directory.
+# E.g. /data
+PROJECT_PATH=
+
+# Set the server name
+# E.g. phylobook.mullins.microbiol.washington.edu
+SERVER_NAME=
+
+# Set the email settings for password reset emails
+EMAIL_HOST=
+# EMAIL_USE_TLS (1 or 0) 1=True 0=False
+EMAIL_USE_TLS=
+EMAIL_PORT=
+EMAIL_HOST_USER=
+EMAIL_HOST_PASSWORD=
+
 # DB configuration
-DB_HOST=db        # Don't change.  db is the name of the Docker service set in docker-compose.yml
 DB_USER=postgres  # Use custom name or leave as "postgres"
-DB_NAME=phylobook # Use custom name or leave as "phylobook"
+DB_NAME=postgres # Use custom name or leave as "phylobook"
 DB_PASS=          # Add a secure password for the database
 
+# There are 3 types of LOGIN_TYPE authentication - "local" (default), "sso", and "dual".
+# Please choose the one that you prefer:
+# local - locally managed accounts with passwords stored encrypted (default)
+# sso - SAML supported single sign on only
+# dual - supports both single sign on and locally managed acounts
+LOGIN_TYPE=local
+
+LOGIN_URL=/login
+
+# For LOGIN_TYPE=dual, uncomment and change the labels to fit your institution
+#LOGIN_SSO_TITLE=UW Login >>
+#LOGIN_SSO_COLLABORATOR_TITLE=Collaborator account:
