--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,23 +13,12 @@ services:
     container_name: phylobook
     volumes:
       - /Users/jfurlong/dev/FigTree-command-line/phylobook_fixed:/data
-#      - .:/code
     ports:
       - 80:80
     depends_on:
       - db
-
-
-#  web:
-#    build: .
-#    command: python /code/manage.py runserver 0.0.0.0:3500
-#    volumes:
-#      - /Users/jfurlong/dev/FigTree-command-line/phylobook_fixed:/data
-#      - .:/code
-#    ports:
-#      - 3500:3500
-#    depends_on:
-#      - db
+    env_file:
+      - config.env
 
 volumes:
   postgres_data:
