--- a/phylobook.conf
+++ b/phylobook.conf
@@ -8,12 +8,13 @@ WSGIPythonPath /phylobook/phylobook
     ErrorLog /phylobook/phylobook_error_log
     CustomLog /phylobook/phylobook_access_log combined
 
+    WSGIApplicationGroup %{GLOBAL}
     WSGIDaemonProcess phylobook python-path=/usr/local/lib/python3/site-packages
     WSGIProcessGroup phylobook
     WSGIScriptAlias / /phylobook/phylobook/wsgi.py
 
-    Alias /static /phylobook/static
-    <Directory /phylobook/static>
+    Alias /static /phylobook/phylobook/staticfiles
+    <Directory /phylobook/phylobook/staticfiles>
         Require all granted
     </Directory>
     <Directory /phylobook/phylobook>
