Added processes=2 threads=30 request-timeout=600 to WSGIDaemonProcess.

--- a/phylobook.conf
+++ b/phylobook.conf
@@ -9,7 +9,7 @@ WSGIPythonPath /phylobook/phylobook
     CustomLog /phylobook/phylobook_access_log combined
 
     WSGIApplicationGroup %{GLOBAL}
-    WSGIDaemonProcess phylobook python-path=/usr/local/lib/python3/site-packages
+    WSGIDaemonProcess phylobook python-path=/usr/local/lib/python3/site-packages processes=2 threads=30 request-timeout=600
     WSGIProcessGroup phylobook
     WSGIScriptAlias / /phylobook/phylobook/wsgi.py
 
