--- a/.env.TEMPLATE
+++ b/.env.TEMPLATE
@@ -18,10 +18,14 @@ PROJECT_PATH=
 SERVER_NAME=
 
 # Set the email settings for password reset emails
-EMAIL_HOST=
+# These settings are used for password reset email requests.  If you are running a stand-alone installation, you can leave the settings as is.
+# Below is an example of the configuration of EMAIL_HOST, EMAIL_USE_TLS, EMAIL_PORT for office365 exchange.
+# In the case of office365, EMAIL_HOST_USER is an email address and EMAIL_HOST_PASSWORD is obviously the password.
+# Other email host settings may vary, please add your host specific email settings.
+EMAIL_HOST=outlook.office365.com
 # EMAIL_USE_TLS (1 or 0) 1=True 0=False
-EMAIL_USE_TLS=
-EMAIL_PORT=
+EMAIL_USE_TLS=1
+EMAIL_PORT=587
 EMAIL_HOST_USER=
 EMAIL_HOST_PASSWORD=
 
