--- a/.env.TEMPLATE
+++ b/.env.TEMPLATE
@@ -38,7 +38,7 @@ EMAIL_HOST_PASSWORD=
 # DB configuration
 # Add a password to DB_PASS.
 DB_USER=postgres  # Use custom name or leave as "postgres"
-DB_NAME=postgres # Use custom name or leave as "phylobook"
+DB_NAME=postgres # Use custom name or leave as "postgres"
 DB_PASS=          # Add a secure password for the database
 
 # There are 3 types of LOGIN_TYPE authentication - "local" (default), "sso", and "dual".
