--- a/.env.TEMPLATE
+++ b/.env.TEMPLATE
@@ -14,6 +14,7 @@ DEBUG=0
 # If you are using a domain name for public use, you will need to add it to the list.
 # E.g. localhost 127.0.0.1 myserver.domain.com
 DJANGO_ALLOWED_HOSTS=localhost 127.0.0.1
+WEB_PORT = 8000
 
 # Set the path to the data directory.  This is where Phylobook finds the project folders to display.
 # E.g. /data
