Fixed bug in Variant Frequencies colors not respecting sliders

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,8 @@ services:
       - postgres_data:/var/lib/postgresql/data/
     env_file:
       - .env
+    #ports:
+    #  - 25432:5432
 
   web:
     build: .
