Added migration to import default lineage names

--- a/.env.TEMPLATE
+++ b/.env.TEMPLATE
@@ -57,3 +57,8 @@ LOGIN_URL=/login
 # For LOGIN_TYPE=dual, uncomment and change the labels to fit your institution
 #LOGIN_SSO_TITLE=UW Login >>
 #LOGIN_SSO_COLLABORATOR_TITLE=Collaborator account:
+
+# Default lineage names by color.
+# Uncomment LINEAGE_FILE line and set the name to the lineage file (make sure the file is in /inital_data).
+# See /phylobook/initial_data/MullinsLineages.csv for the format.
+# LINEAGE_FILE=MullinsLineages.csv
