--- a/.gitignore
+++ b/.gitignore
@@ -125,6 +125,7 @@ phylobook_error_log
 
 # Exclude special testing data
 /sample_data/Peter_Test_V704
+/temp/
 
 # Exclude vscode stuff
-.vscode 
+.vscode
