Added reloading .env to .Restart

--- a/.env.TEMPLATE
+++ b/.env.TEMPLATE
@@ -38,9 +38,13 @@ EMAIL_HOST_PASSWORD=
 
 # DB configuration
 # Add a password to DB_PASS.
-DB_USER=postgres  # Use custom name or leave as "postgres"
-DB_NAME=postgres # Use custom name or leave as "postgres"
-DB_PASS=          # Add a secure password for the database
+
+# Use custom name or leave as "postgres"
+DB_USER=postgres  
+# Use custom name or leave as "postgres"
+DB_NAME=postgres 
+# Add a secure password for the database
+DB_PASS=          
 
 # There are 3 types of LOGIN_TYPE authentication - "local" (default), "sso", and "dual".
 # An IT professional will be required to configure "sso" and "dual".  If you are not familiar with SAML,
