--- a/phylobook.conf
+++ b/phylobook.conf
@@ -4,7 +4,7 @@ WSGIPythonPath /phylobook/phylobook
 <VirtualHost *:8000>
     ServerAdmin webmaster@localhost
     DocumentRoot /phylobook
-    LogLevel debug
+    LogLevel notice
     ErrorLog /phylobook/phylobook_error_log
     CustomLog /phylobook/phylobook_access_log combined
 
