Added management command to import .fasta files, and added ability to limit number of .fasta files processed at once.

--- a/.env.TEMPLATE
+++ b/.env.TEMPLATE
@@ -66,3 +66,7 @@ LOGIN_URL=/login
 # Uncomment LINEAGE_FILE line and set the name to the lineage file (make sure the file is in /inital_data).
 # See /phylobook/initial_data/MullinsLineages.csv for the format.
 # LINEAGE_FILE=MullinsLineages.csv
+
+# Indicates the number of uploaded .fasta files that can be processed at once.
+# Defaults to the number of cores on the server.
+# MAX_FASTA_PROCESSORS=
