Added setting to control how often the notifications refresh

--- a/.env.TEMPLATE
+++ b/.env.TEMPLATE
@@ -70,3 +70,7 @@ LOGIN_URL=/login
 # Indicates the number of uploaded .fasta files that can be processed at once.
 # Defaults to the number of cores on the server.
 # MAX_FASTA_PROCESSORS=
+
+# Number of seconds between checks for new notifications.  
+# Defaults to 300 seconds (5 minutes) if not set.
+# NOTIFICATION_UPDATE_INTERVAL=300
