--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ django-crispy-forms==1.13.0
 django-guardian==2.4.0
 django-settings-export==1.2.1
 django-environ
+django-extensions
 idna==3.3
 isodate==0.6.0
 Jinja2==2.11.3
