Extended timeout for gunicorn.\nExplicitly defined the  for the project downloads.

--- a/docker-compose-gunicorn.yml
+++ b/docker-compose-gunicorn.yml
@@ -22,7 +22,7 @@ services:
         cron
         crontab /phylobook/crontab_process_fasta
         python manage.py collectstatic --noinput
-        gunicorn -w 2 -b 0.0.0.0:${WEB_PORT} phylobook.wsgi:application
+        gunicorn -t 600 -w 2 -b 0.0.0.0:${WEB_PORT} phylobook.wsgi:application
 
     volumes:
       - .:/phylobook
